<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
    android:weightSum="1">


   <!-- Paint layout -->

    <!--buttons layout-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:id="@+id/ui_buttons"
            android:layout_weight="0.11"
            android:background="#a3ffe9">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton2"
                android:layout_weight="0.22"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/paint_button" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton3"
                android:layout_weight="0.17"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/save_button" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton4"
                android:layout_weight="0.19"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/erase_button" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageButton"
                android:layout_weight="0.22"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/new_button" />

        </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/paint_layout">


        <!--adding another layout for the paint squares-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/paint_square_layout"
            android:layout_marginTop="20dp"
            android:weightSum="1">


            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton5"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/paint_color"
                android:background="#ff0109"
                android:tag="#ff0109"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton6"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/paint_color"
                android:background="#0b4d15"
                android:tag="#0b4d15"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton7"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/paint_color"
                android:background="#0a00ff"
                android:tag="#0a00ff"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton8"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/paint_color"
                android:background="#010000"
                android:tag="#010000"/>/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton9"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/paint_color"
                android:background="#ddff10"
                android:tag="#ddff10"/>

        </LinearLayout>


    </LinearLayout>

    <edu.uc.cech.it.drawingapp.CustomView
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_marginTop="30dp" />



</LinearLayout>

